# pros-lvgl-sim

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md  lv_conf.h  lv_drv_conf.h  vcpkg-configuration.json  vcpkg.json
frontend/: CMakeLists.txt
frontend/include/: competition.hpp  display.hpp  drivers.hpp  frame.hpp  lvgl_driver.hpp  main.hpp  ticktimer.hpp  userfns.hpp  widgetids.hpp
frontend/include/widgets/: competition.hpp  display.hpp  frame.hpp
frontend/src/: competition.cpp  display.cpp  drivers.cpp  frame.cpp  lvgl_driver.cpp  main.cpp  ticktimer.cpp  userfns.cpp
frontend/src/widgets/: competition.cpp  display.cpp  frame.cpp
include/: lv_drv_conf.h
simulator/: CMakeLists.txt
simulator/include/: lv_conf.h
simulator/include/liblvgl/: lv_conf_internal.h
simulator/include/liblvgl/core/: lv_obj_style.h  lv_refr.h
simulator/include/liblvgl/draw/: lv_draw.h  lv_draw_img.h  lv_draw_triangle.h  lv_img_cache.h
simulator/include/liblvgl/draw/nxp/pxp/: lv_draw_pxp_blend.h  lv_gpu_nxp_pxp_osa.h
simulator/include/liblvgl/draw/nxp/vglite/: lv_draw_vglite_blend.h
simulator/include/liblvgl/draw/sdl/: lv_draw_sdl_composite.h  lv_draw_sdl_texture_cache.h
simulator/include/liblvgl/draw/sw/: lv_draw_sw.h
simulator/include/liblvgl/extra/libs/gif/: lv_gif.h
simulator/include/liblvgl/extra/libs/png/: lodepng.h
simulator/include/liblvgl/font/: lv_font.h
simulator/include/liblvgl/misc/: lv_anim_timeline.h  lv_assert.h  lv_lru.h  lv_printf.h  lv_style.h  lv_txt_ap.h
simulator/include/liblvgl/widgets/: lv_roller.h  lv_slider.h  lv_table.h  lv_textarea.h
simulator/src/: pros_stubs.cpp
simulator/src/liblvgl/: llemu.c
simulator/src/liblvgl/core/: lv_disp.c  lv_event.c  lv_group.c  lv_indev.c  lv_indev_scroll.c  lv_obj.c  lv_obj_draw.c  lv_obj_pos.c  lv_obj_style.c  lv_obj_style_gen.c  lv_obj_tree.c  lv_refr.c  lv_theme.c
simulator/src/liblvgl/draw/: lv_draw.c  lv_draw_arc.c  lv_draw_img.c  lv_draw_label.c  lv_draw_layer.c  lv_draw_mask.c  lv_draw_rect.c  lv_draw_transform.c  lv_draw_triangle.c  lv_img_buf.c  lv_img_cache.c  lv_img_decoder.c
simulator/src/liblvgl/draw/arm2d/: lv_gpu_arm2d.c
simulator/src/liblvgl/draw/nxp/: lv_gpu_nxp.c
simulator/src/liblvgl/draw/nxp/pxp/: lv_gpu_nxp_pxp.c  lv_gpu_nxp_pxp_osa.c
simulator/src/liblvgl/draw/nxp/vglite/: lv_draw_vglite_blend.c  lv_draw_vglite_rect.c  lv_gpu_nxp_vglite.c
simulator/src/liblvgl/draw/sdl/: lv_draw_sdl.c  lv_draw_sdl_arc.c  lv_draw_sdl_bg.c  lv_draw_sdl_composite.c  lv_draw_sdl_img.c  lv_draw_sdl_label.c  lv_draw_sdl_layer.c  lv_draw_sdl_line.c  lv_draw_sdl_mask.c  lv_draw_sdl_polygon.c  lv_draw_sdl_rect.c  lv_draw_sdl_texture_cache.c  lv_draw_sdl_utils.c
simulator/src/liblvgl/draw/stm32_dma2d/: lv_gpu_stm32_dma2d.c
simulator/src/liblvgl/draw/sw/: lv_draw_sw.c  lv_draw_sw_arc.c  lv_draw_sw_blend.c  lv_draw_sw_dither.c  lv_draw_sw_gradient.c  lv_draw_sw_img.c  lv_draw_sw_layer.c  lv_draw_sw_letter.c  lv_draw_sw_line.c  lv_draw_sw_polygon.c  lv_draw_sw_rect.c  lv_draw_sw_transform.c
simulator/src/liblvgl/draw/swm341_dma2d/: lv_gpu_swm341_dma2d.c
simulator/src/liblvgl/extra/layouts/grid/: lv_grid.c
simulator/src/liblvgl/extra/libs/bmp/: lv_bmp.c
simulator/src/liblvgl/extra/libs/ffmpeg/: lv_ffmpeg.c
simulator/src/liblvgl/extra/libs/freetype/: lv_freetype.c
simulator/src/liblvgl/extra/libs/fsdrv/: lv_fs_stdio.c
simulator/src/liblvgl/extra/libs/gif/: gifdec.c  lv_gif.c
simulator/src/liblvgl/extra/libs/png/: lv_png.c
simulator/src/liblvgl/extra/libs/qrcode/: lv_qrcode.c
simulator/src/liblvgl/extra/libs/rlottie/: lv_rlottie.c
simulator/src/liblvgl/extra/libs/sjpg/: lv_sjpg.c  tjpgd.c
simulator/src/liblvgl/extra/others/fragment/: lv_fragment.c  lv_fragment_manager.c
simulator/src/liblvgl/extra/others/gridnav/: lv_gridnav.c
simulator/src/liblvgl/extra/others/imgfont/: lv_imgfont.c
simulator/src/liblvgl/extra/others/monkey/: lv_monkey.c
simulator/src/liblvgl/extra/others/msg/: lv_msg.c
simulator/src/liblvgl/extra/others/snapshot/: lv_snapshot.c
simulator/src/liblvgl/extra/themes/basic/: lv_theme_basic.c
simulator/src/liblvgl/extra/themes/default/: lv_theme_default.c
simulator/src/liblvgl/extra/themes/mono/: lv_theme_mono.c
simulator/src/liblvgl/extra/widgets/animimg/: lv_animimg.c
simulator/src/liblvgl/extra/widgets/calendar/: lv_calendar.c  lv_calendar_header_arrow.c  lv_calendar_header_dropdown.c
simulator/src/liblvgl/extra/widgets/chart/: lv_chart.c
simulator/src/liblvgl/extra/widgets/colorwheel/: lv_colorwheel.c
simulator/src/liblvgl/extra/widgets/imgbtn/: lv_imgbtn.c
simulator/src/liblvgl/extra/widgets/keyboard/: lv_keyboard.c
simulator/src/liblvgl/extra/widgets/led/: lv_led.c
simulator/src/liblvgl/extra/widgets/list/: lv_list.c
simulator/src/liblvgl/extra/widgets/menu/: lv_menu.c
simulator/src/liblvgl/extra/widgets/meter/: lv_meter.c
simulator/src/liblvgl/font/: lv_font.c  lv_font_dejavu_16_persian_hebrew.c  lv_font_fmt_txt.c  lv_font_loader.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_28.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_40.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_unscii_16.c  lv_font_unscii_8.c
simulator/src/liblvgl/hal/: lv_hal_disp.c  lv_hal_indev.c  lv_hal_tick.c
simulator/src/liblvgl/lv_fonts/: pros_font_dejavu_mono_10.c  pros_font_dejavu_mono_30.c
simulator/src/liblvgl/misc/: lv_anim.c  lv_area.c  lv_async.c  lv_bidi.c  lv_fs.c  lv_gc.c  lv_log.c  lv_lru.c  lv_math.c  lv_style.c  lv_timer.c  lv_tlsf.c  lv_txt.c  lv_txt_ap.c  lv_utils.c
simulator/src/liblvgl/widgets/: lv_arc.c  lv_bar.c  lv_btn.c  lv_btnmatrix.c  lv_canvas.c  lv_checkbox.c  lv_dropdown.c  lv_img.c  lv_label.c  lv_line.c  lv_objx_templ.c  lv_roller.c  lv_slider.c  lv_switch.c  lv_table.c  lv_textarea.c
simulator/src/pros/: adi.c  adi.cpp  competition.cpp  usd.cpp
user/: CMakeLists.txt
user/include/: main.h
user/src/: main.cpp
(+9 files in other folders)
