cmake_minimum_required(VERSION 3.10)

set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)

project(sim-library)

add_library(
	sim-library
	
	src/liblvgl/core/lv_disp.c
	src/liblvgl/core/lv_event.c
	src/liblvgl/core/lv_group.c
	src/liblvgl/core/lv_indev.c
	src/liblvgl/core/lv_indev_scroll.c
	src/liblvgl/core/lv_obj.c
	src/liblvgl/core/lv_obj_class.c
	src/liblvgl/core/lv_obj_draw.c
	src/liblvgl/core/lv_obj_pos.c
	src/liblvgl/core/lv_obj_scroll.c
	src/liblvgl/core/lv_obj_style.c
	src/liblvgl/core/lv_obj_style_gen.c
	src/liblvgl/core/lv_obj_tree.c
	src/liblvgl/core/lv_refr.c
	src/liblvgl/core/lv_theme.c
	src/liblvgl/draw/arm2d/lv_gpu_arm2d.c
	src/liblvgl/draw/lv_draw.c
	src/liblvgl/draw/lv_draw_arc.c
	src/liblvgl/draw/lv_draw_img.c
	src/liblvgl/draw/lv_draw_label.c
	src/liblvgl/draw/lv_draw_layer.c
	src/liblvgl/draw/lv_draw_line.c
	src/liblvgl/draw/lv_draw_mask.c
	src/liblvgl/draw/lv_draw_rect.c
	src/liblvgl/draw/lv_draw_transform.c
	src/liblvgl/draw/lv_draw_triangle.c
	src/liblvgl/draw/lv_img_buf.c
	src/liblvgl/draw/lv_img_cache.c
	src/liblvgl/draw/lv_img_decoder.c
	src/liblvgl/draw/nxp/lv_gpu_nxp.c
	src/liblvgl/draw/nxp/pxp/lv_draw_pxp_blend.c
	src/liblvgl/draw/nxp/pxp/lv_gpu_nxp_pxp.c
	src/liblvgl/draw/nxp/pxp/lv_gpu_nxp_pxp_osa.c
	src/liblvgl/draw/nxp/vglite/lv_draw_vglite_arc.c
	src/liblvgl/draw/nxp/vglite/lv_draw_vglite_blend.c
	src/liblvgl/draw/nxp/vglite/lv_draw_vglite_rect.c
	src/liblvgl/draw/nxp/vglite/lv_gpu_nxp_vglite.c
	src/liblvgl/draw/sdl/lv_draw_sdl.c
	src/liblvgl/draw/sdl/lv_draw_sdl_arc.c
	src/liblvgl/draw/sdl/lv_draw_sdl_bg.c
	src/liblvgl/draw/sdl/lv_draw_sdl_composite.c
	src/liblvgl/draw/sdl/lv_draw_sdl_img.c
	src/liblvgl/draw/sdl/lv_draw_sdl_label.c
	src/liblvgl/draw/sdl/lv_draw_sdl_layer.c
	src/liblvgl/draw/sdl/lv_draw_sdl_line.c
	src/liblvgl/draw/sdl/lv_draw_sdl_mask.c
	src/liblvgl/draw/sdl/lv_draw_sdl_polygon.c
	src/liblvgl/draw/sdl/lv_draw_sdl_rect.c
	src/liblvgl/draw/sdl/lv_draw_sdl_stack_blur.c
	src/liblvgl/draw/sdl/lv_draw_sdl_texture_cache.c
	src/liblvgl/draw/sdl/lv_draw_sdl_utils.c
	src/liblvgl/draw/stm32_dma2d/lv_gpu_stm32_dma2d.c
	src/liblvgl/draw/sw/lv_draw_sw.c
	src/liblvgl/draw/sw/lv_draw_sw_arc.c
	src/liblvgl/draw/sw/lv_draw_sw_blend.c
	src/liblvgl/draw/sw/lv_draw_sw_dither.c
	src/liblvgl/draw/sw/lv_draw_sw_gradient.c
	src/liblvgl/draw/sw/lv_draw_sw_img.c
	src/liblvgl/draw/sw/lv_draw_sw_layer.c
	src/liblvgl/draw/sw/lv_draw_sw_letter.c
	src/liblvgl/draw/sw/lv_draw_sw_line.c
	src/liblvgl/draw/sw/lv_draw_sw_polygon.c
	src/liblvgl/draw/sw/lv_draw_sw_rect.c
	src/liblvgl/draw/sw/lv_draw_sw_transform.c
	src/liblvgl/draw/swm341_dma2d/lv_gpu_swm341_dma2d.c
	src/liblvgl/extra/layouts/flex/lv_flex.c
	src/liblvgl/extra/layouts/grid/lv_grid.c
	src/liblvgl/extra/libs/bmp/lv_bmp.c
	src/liblvgl/extra/libs/ffmpeg/lv_ffmpeg.c
	src/liblvgl/extra/libs/freetype/arial.ttf
	src/liblvgl/extra/libs/freetype/lv_freetype.c
	src/liblvgl/extra/libs/fsdrv/lv_fs_fatfs.c
	src/liblvgl/extra/libs/fsdrv/lv_fs_posix.c
	src/liblvgl/extra/libs/fsdrv/lv_fs_stdio.c
	src/liblvgl/extra/libs/fsdrv/lv_fs_win32.c
	src/liblvgl/extra/libs/gif/gifdec.c
	src/liblvgl/extra/libs/gif/lv_gif.c
	src/liblvgl/extra/libs/png/lodepng.c
	src/liblvgl/extra/libs/png/lv_png.c
	src/liblvgl/extra/libs/qrcode/lv_qrcode.c
	src/liblvgl/extra/libs/qrcode/qrcodegen.c
	src/liblvgl/extra/libs/rlottie/lv_rlottie.c
	src/liblvgl/extra/libs/sjpg/lv_sjpg.c
	src/liblvgl/extra/libs/sjpg/tjpgd.c
	src/liblvgl/extra/lv_extra.c
	src/liblvgl/extra/others/fragment/lv_fragment.c
	src/liblvgl/extra/others/fragment/lv_fragment_manager.c
	src/liblvgl/extra/others/gridnav/lv_gridnav.c
	src/liblvgl/extra/others/ime/lv_ime_pinyin.c
	src/liblvgl/extra/others/imgfont/lv_imgfont.c
	src/liblvgl/extra/others/monkey/lv_monkey.c
	src/liblvgl/extra/others/msg/lv_msg.c
	src/liblvgl/extra/others/snapshot/lv_snapshot.c
	src/liblvgl/extra/themes/basic/lv_theme_basic.c
	src/liblvgl/extra/themes/default/lv_theme_default.c
	src/liblvgl/extra/themes/mono/lv_theme_mono.c
	src/liblvgl/extra/widgets/animimg/lv_animimg.c
	src/liblvgl/extra/widgets/calendar/lv_calendar.c
	src/liblvgl/extra/widgets/calendar/lv_calendar_header_arrow.c
	src/liblvgl/extra/widgets/calendar/lv_calendar_header_dropdown.c
	src/liblvgl/extra/widgets/chart/lv_chart.c
	src/liblvgl/extra/widgets/colorwheel/lv_colorwheel.c
	src/liblvgl/extra/widgets/imgbtn/lv_imgbtn.c
	src/liblvgl/extra/widgets/keyboard/lv_keyboard.c
	src/liblvgl/extra/widgets/led/lv_led.c
	src/liblvgl/extra/widgets/list/lv_list.c
	src/liblvgl/extra/widgets/menu/lv_menu.c
	src/liblvgl/extra/widgets/meter/lv_meter.c
	src/liblvgl/extra/widgets/msgbox/lv_msgbox.c
	src/liblvgl/extra/widgets/span/lv_span.c
	src/liblvgl/extra/widgets/spinbox/lv_spinbox.c
	src/liblvgl/extra/widgets/spinner/lv_spinner.c
	src/liblvgl/extra/widgets/tabview/lv_tabview.c
	src/liblvgl/extra/widgets/tileview/lv_tileview.c
	src/liblvgl/extra/widgets/win/lv_win.c
	src/liblvgl/font/korean.ttf
	src/liblvgl/font/lv_font.c
	src/liblvgl/font/lv_font_dejavu_16_persian_hebrew.c
	src/liblvgl/font/lv_font_fmt_txt.c
	src/liblvgl/font/lv_font_loader.c
	src/liblvgl/font/lv_font_montserrat_10.c
	src/liblvgl/font/lv_font_montserrat_12.c
	src/liblvgl/font/lv_font_montserrat_12_subpx.c
	src/liblvgl/font/lv_font_montserrat_14.c
	src/liblvgl/font/lv_font_montserrat_16.c
	src/liblvgl/font/lv_font_montserrat_18.c
	src/liblvgl/font/lv_font_montserrat_20.c
	src/liblvgl/font/lv_font_montserrat_22.c
	src/liblvgl/font/lv_font_montserrat_24.c
	src/liblvgl/font/lv_font_montserrat_26.c
	src/liblvgl/font/lv_font_montserrat_28.c
	src/liblvgl/font/lv_font_montserrat_28_compressed.c
	src/liblvgl/font/lv_font_montserrat_30.c
	src/liblvgl/font/lv_font_montserrat_32.c
	src/liblvgl/font/lv_font_montserrat_34.c
	src/liblvgl/font/lv_font_montserrat_36.c
	src/liblvgl/font/lv_font_montserrat_38.c
	src/liblvgl/font/lv_font_montserrat_40.c
	src/liblvgl/font/lv_font_montserrat_42.c
	src/liblvgl/font/lv_font_montserrat_44.c
	src/liblvgl/font/lv_font_montserrat_46.c
	src/liblvgl/font/lv_font_montserrat_48.c
	src/liblvgl/font/lv_font_montserrat_8.c
	src/liblvgl/font/lv_font_simsun_16_cjk.c
	src/liblvgl/font/lv_font_unscii_16.c
	src/liblvgl/font/lv_font_unscii_8.c
	src/liblvgl/hal/lv_hal_disp.c
	src/liblvgl/hal/lv_hal_indev.c
	src/liblvgl/hal/lv_hal_tick.c
	src/liblvgl/llemu.c
	src/liblvgl/llemu.cpp
	src/liblvgl/lv_fonts/pros_font_dejavu_mono_10.c
	src/liblvgl/lv_fonts/pros_font_dejavu_mono_18.c
	src/liblvgl/lv_fonts/pros_font_dejavu_mono_30.c
	src/liblvgl/lv_fonts/pros_font_dejavu_mono_40.c
	src/liblvgl/misc/lv_anim.c
	src/liblvgl/misc/lv_anim_timeline.c
	src/liblvgl/misc/lv_area.c
	src/liblvgl/misc/lv_async.c
	src/liblvgl/misc/lv_bidi.c
	src/liblvgl/misc/lv_color.c
	src/liblvgl/misc/lv_fs.c
	src/liblvgl/misc/lv_gc.c
	src/liblvgl/misc/lv_ll.c
	src/liblvgl/misc/lv_log.c
	src/liblvgl/misc/lv_lru.c
	src/liblvgl/misc/lv_math.c
	src/liblvgl/misc/lv_mem.c
	src/liblvgl/misc/lv_printf.c
	src/liblvgl/misc/lv_style.c
	src/liblvgl/misc/lv_style_gen.c
	src/liblvgl/misc/lv_templ.c
	src/liblvgl/misc/lv_timer.c
	src/liblvgl/misc/lv_tlsf.c
	src/liblvgl/misc/lv_txt.c
	src/liblvgl/misc/lv_txt_ap.c
	src/liblvgl/misc/lv_utils.c
	src/liblvgl/widgets/lv_arc.c
	src/liblvgl/widgets/lv_bar.c
	src/liblvgl/widgets/lv_btn.c
	src/liblvgl/widgets/lv_btnmatrix.c
	src/liblvgl/widgets/lv_canvas.c
	src/liblvgl/widgets/lv_checkbox.c
	src/liblvgl/widgets/lv_dropdown.c
	src/liblvgl/widgets/lv_img.c
	src/liblvgl/widgets/lv_label.c
	src/liblvgl/widgets/lv_line.c
	src/liblvgl/widgets/lv_objx_templ.c
	src/liblvgl/widgets/lv_roller.c
	src/liblvgl/widgets/lv_slider.c
	src/liblvgl/widgets/lv_switch.c
	src/liblvgl/widgets/lv_table.c
	src/liblvgl/widgets/lv_textarea.c
	src/pros/adi.c
	src/pros/adi.cpp
)

target_include_directories(sim-library PUBLIC "${PROJECT_SOURCE_DIR}/include")